--- a/configs/mini-gcml/conv4-ybranch-mini-gcml.yaml
+++ b/configs/mini-gcml/conv4-ybranch-mini-gcml.yaml
@@ -14,6 +14,7 @@ shots_mode: patience
 shots_patience: 3
 shots_change: 3
 n_train_shot: 9
+min_shots: 3
 ways_mode: patience
 ways_patience: 3
 ways_change: 1
